--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ twitter_username:
 use_math: true
 
 # Everything below here can be ignored, unless you want to change the theme entirely
-theme: minima
+theme: jekyll-theme-cayman
 plugins:
   - jekyll-feed
   - jekyll-gist
